@@ -1,3 +1,9 @@
+2005-04-06  Derek Price  <derek@ximbiot.com>
+
+	* Makefile.am (MAINTAINERCLEANFILES): Add cvs.1.
+	(cvs.1): Create intermediate file so that the original isn't emptied on
+	error.
+
 2005-01-31  Derek Price  <derek@ximbiot.com>
 
 	* Makefile.am, cvs.man.header, cvs.texinfo: Update copyright notices.
